--- a/style.css
+++ b/style.css
@@ -35,6 +35,11 @@
     .painting1::before{
         display: none;
     }
+    .bg_circle{
+        display: none;
+        height: 307px;
+        width: 346px;
+    }
 }   
 
 @media (max-width: 400px){
@@ -135,6 +140,19 @@
     border: 50px solid #6d50cd9d;
     border-radius: 50%;
     z-index: -1; /* To place the circle behind the image */
+}
+
+.bg_circle {
+    content: url(./img/bg_abstr.jpg);
+    position: absolute;
+    z-index: -2;
+    width: 420px;
+    height: 420px;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    filter: blur(0.5px);
 }
 
 .alli{
@@ -252,3 +270,207 @@
     }
     
 }
+
+/* New nav */
+.circle{
+    position: absolute;
+    bottom: 0px;
+    left: 10px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #6D50CD;
+}
+
+.square{
+    width: 30px;
+    height: 30px;
+    background-color: #71CDB4;
+    border-radius: 5px;
+}
+
+.logo{
+    display: inline-flex;
+    align-items: center;
+}
+
+.logo_m{
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    width: auto;
+}
+
+.inter{
+    position: relative;
+    display: inline-flex;
+}
+
+.inter .circle{
+    position: absolute;
+}
+
+.navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.log {
+    display: inline-flex;
+    margin-left: auto; 
+    align-items: center;
+    gap: 10px;
+}
+
+.log > button{
+    border-radius: 35px;
+    font-weight: 900px;
+    color: black;
+    font-weight: 700 !important;
+}
+
+.main_b{
+    border: 0;
+    background-color: #6D50CD;
+    color: white;
+}
+
+.navigation_center{
+    margin-left: auto;
+}
+
+.t_nav{
+    font-weight: 500;
+    transition: all 0.1s linear;
+}
+
+.t_nav:hover{
+    border-bottom: 2px solid #6D50CD;
+    transition: all 0.1s linear;
+}
+
+.containy{
+    margin-left: 20%;
+    margin-right: 20%;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    /* gap: 100px; */
+}
+
+/* .logyy{
+    filter: invert(100%);
+} */
+@media ( max-width: 991px ){
+    
+    .one{
+        transform: rotate(0deg) !important;
+    }
+    .two{
+        transform: rotate(0deg) !important;
+    }
+    .three{
+        transform: rotate(0deg) !important;
+    }
+    .four{
+        transform: rotate(0deg) !important;
+    }
+
+    .five{
+        transform: rotate(0deg) !important;
+    }
+
+    .six{
+        transform: rotate(0deg) !important;
+    }
+}
+
+.element{
+    /* font-size: 15px !important; */
+    padding: 10px;
+    font-weight: 700;
+    background-color: white;
+    border-radius: 5px;
+}
+
+.unique{
+    background: #6D50CD;
+    color: white !important;
+    border-radius: 5px;
+    font-weight: 700;
+}
+
+.rowy{
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    flex-direction: row;
+}
+
+.one{
+    transform: rotate(6deg);
+}
+.two{
+    transform: rotate(-6deg);
+}
+.three{
+    transform: rotate(6deg);
+}
+.four{
+    transform: rotate(-6deg);
+}
+
+.five{
+    transform: rotate(-6deg);
+}
+
+.six{
+    transform: rotate(6deg);
+}
+
+.bgy{
+    position: relative; /* important for bg*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50%;   /* important for bg*/
+
+    color: black;
+    /* padding: 3vw; */
+    /* border-radius: 5vw; */
+
+
+    /* box-shadow: 8px 8px 2px 1px rgba(137, 137, 137, 0.2); */
+    z-index: 2;      /* important for bg*/
+    overflow: hidden;    /* important for bg*/
+}
+
+.bgy::before{
+    content: "";  /* important for bg*/
+    position: absolute;
+    z-index: -1;
+    background-image: url(./try1.avif);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    filter: blur(2.2px) brightness(95%);
+}
+
+.pos{
+    position: absolute;
+    left: -2.5em;
+    top: 0.5em;
+}
+
+.rela{
+    position: relative;
+}
+
